syntax = "proto3";

package nutritions;

service NutritionsService {
  rpc ListNutritionsByIngredientId (IngredientId) returns (ListNutritions) {}
  rpc SetNutritionToIngredient (SetNutrition) returns (Nutrition) {}
  rpc GetNutritionById (NutritionId) returns (Nutrition) {}
  rpc RemoveNutritionDataForIngredient (IngredientId) returns (Empty) {}
}

message IngredientId {
  int32 id = 1;
}

message Empty {

}

message Nutrition {
  int32 id = 1;
  string name = 2;
  string per_gram = 3;
  int32 ingredient_id = 4;
}

message ListNutritions {
  repeated Nutrition nutritions = 1;
}

message NutritionId {
  int32 id = 1;
}

message SetNutrition {
  int32 id = 1;
  string per_gram = 2;
  int32 ingredient_id = 3;
}
